--- a/css/common.css
+++ b/css/common.css
@@ -13,6 +13,54 @@ body {
   line-height: 1.5;
 }
 
+/* Task 1 */
+#categories {
+  padding-left: 0;
+  margin: 24px;
+}
+
+#categories ul {
+  width: 360px;
+  padding-left: 0;
+}
+
+#categories .item {
+  border-radius: 8px;
+  background: #f6f6fe;
+  list-style-type: none;
+  width: 392px;
+  padding: 16px;
+  margin: 24px 0;
+}
+
+#categories .item ul {
+  list-style-type: none;
+}
+
+#categories .item h2 {
+  color: #2e2f42;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.33em;
+  letter-spacing: 0.96px;
+  padding-bottom: 16px;
+  margin: 0;
+}
+
+#categories .item li {
+  color: #2e2f42;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5em;
+  letter-spacing: 0.64px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  margin-bottom: 8px;
+  padding: 8px 16px;
+}
+
 .gallery {
   display: flex;
 }
