--- a/css/common.css
+++ b/css/common.css
@@ -82,3 +82,30 @@ body {
   border-radius: 8px;
   vertical-align: bottom;
 }
+
+/* Task 3 */
+h1 {
+  color: #2e2f42;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.33em;
+  letter-spacing: 0.96px;
+}
+
+#name-input {
+  border-radius: 4px;
+  border: 1px solid #808080;
+  width: 360px;
+  height: 40px;
+  padding-left: 16px;
+}
+
+#name-input::placeholder {
+  color: #2e2f42;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5em;
+  letter-spacing: 0.64px;
+}
