--- a/css/common.css
+++ b/css/common.css
@@ -109,3 +109,56 @@ h1 {
   line-height: 1.5em;
   letter-spacing: 0.64px;
 }
+
+/* Task 4 */
+.login-form label {
+  color: #2e2f42;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5em;
+  letter-spacing: 0.64px;
+  display: block;
+  margin-bottom: 8px;
+}
+
+.login-form input {
+  display: flex;
+  width: 360px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  margin-bottom: 16px;
+  color: #2e2f42;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5em;
+  letter-spacing: 0.64px;
+}
+
+.login-form input:hover {
+  border-color: #000;
+}
+
+.login-form button {
+  background-color: #4e75ff;
+  color: #ffffff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5em;
+  letter-spacing: 0.64px;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.login-form button:hover {
+  background-color: #6c8cff;
+}
