--- a/css/common.css
+++ b/css/common.css
@@ -162,3 +162,31 @@ h1 {
 .login-form button:hover {
   background-color: #6c8cff;
 }
+
+/* Task 5 */
+.widget {
+  color: #2e2f42;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5em;
+  letter-spacing: 0.64px;
+}
+
+.widget button {
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5em;
+  letter-spacing: 0.64px;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 8px;
+  background-color: #4e75ff;
+  cursor: pointer;
+}
+
+.widget button:hover {
+  background-color: #6c8cff;
+}
