--- a/css/common.css
+++ b/css/common.css
@@ -190,3 +190,63 @@ h1 {
 .widget button:hover {
   background-color: #6c8cff;
 }
+
+/* Task 6 */
+#controls {
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
+  background: #f6f6fe;
+  border-radius: 8px;
+  padding: 32px;
+  width: auto;
+  margin-bottom: 16px;
+}
+
+#controls input {
+  padding: 8px 72px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  border: 1px solid #808080;
+}
+
+#controls button[data-create],
+#controls button[data-destroy] {
+  width: 120px;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+#controls button[data-create] {
+  background-color: #4e75ff;
+}
+
+#controls button[data-create]:hover {
+  background-color: #6c8cff;
+}
+
+#controls button[data-destroy] {
+  background-color: #ff4e4e;
+}
+
+#controls button[data-destroy]:hover {
+  background-color: #ff7070;
+}
+
+#boxes {
+  display: flex;
+  padding: 32px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 8px;
+  background: #f6f6fe;
+}
